--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="aashish.png" type="image/x-icon">
     <title>HTML Practice</title>
 </head>
 <body style="background-color: aliceblue;">
     <h1 style="color: navy; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">This is home page</h1>
-    <img src="aashish.png" style="width: 40%;
+    <img src="aashish.png" style="width: 30%;
     box-shadow: 3px 3px 5px rgba(0,0,0,0.3), 5px 5px 9px rgba(0,0,0,0.2);" alt="Photo of Aashish." title="Aashish Adhikari">
    <p>
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus ab aliquam magnam molestiae corrupti eum id dignissimos vitae, porro repellat earum fuga? Fugit magnam vitae deleniti officiis corrupti inventore libero enim expedita. Animi accusantium dicta laudantium pariatur placeat corrupti nobis?
